# appstore

./: .bandit.yaml  .bandit.yml  .bowerrc  .coveragerc  .dockerignore  .editorconfig  .eslintrc  .eslintrc.json  .gitignore  .gitmodules  .jshintrc  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.rst  REUSE.toml  bower.json  db.sqlite3-org  dev-requirements.txt  docker-compose.yml  karma.conf.js  manage.py  npm-shrinkwrap.json  package-lock.json  package.json  poetry.toml  pyproject.toml  random_24026.txt  renovate.json  requirements.txt  tsconfig.json  (+2 more)
.github/: .codecov.yml  CONTRIBUTING.md  dependabot.yml  issue_template.md  renovate.json
.github/ISSUE_TEMPLATE/: 1_bug_report.md  config.yml
.github/workflows/: analysis-coverage.yml  command-rebase.yml  docs-check.yml  docs.yml  pr-feedback.yml  sphinxbuild.yml  tests.yml  yarn.yml
.tx/: config
LICENSES/: LicenseRef-PayPalTrademarks.txt  LicenseRef-StripeTrademarks.txt
docs/: Makefile  api.md  conf.py  configuration.rst  developer.rst  devinstall.rst  docker.rst  documentation.rst  index.rst  installation.rst  make.bat  ncdev.rst  prodinstall.rst  prodinstalldocker.rst  restapi.rst  storedeveloper.rst  translation.rst  upgradenotices.rst  upgrading.rst
docs/_static/: logo.svg.license
docs/api/: app-discover.rst  app-discover.schema.json  index.rst  restapi.rst
docs/api/images/: discover-example-carousel-1.webp.license
locale/af/LC_MESSAGES/: django.po
locale/an/LC_MESSAGES/: django.po
locale/ar/LC_MESSAGES/: django.po
locale/ast/LC_MESSAGES/: django.po
locale/az/LC_MESSAGES/: django.po
locale/be/LC_MESSAGES/: django.po
locale/bg/LC_MESSAGES/: django.po
locale/bn/LC_MESSAGES/: django.po
locale/bn_BD/LC_MESSAGES/: django.po
locale/br/LC_MESSAGES/: django.po
locale/bs/LC_MESSAGES/: django.po
locale/ca/LC_MESSAGES/: django.po
locale/cs/LC_MESSAGES/: django.po
locale/cs_CZ/LC_MESSAGES/: django.po
locale/cy/LC_MESSAGES/: django.po
locale/cy_GB/LC_MESSAGES/: django.po
locale/da/LC_MESSAGES/: django.po
locale/de/LC_MESSAGES/: django.mo  django.po
locale/de_DE/LC_MESSAGES/: django.po
locale/el/LC_MESSAGES/: django.po
locale/en-gb/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
locale/en_GB/LC_MESSAGES/: django.po
locale/eo/LC_MESSAGES/: django.po
locale/es-ar/LC_MESSAGES/: django.po
locale/es-co/LC_MESSAGES/: django.po
locale/es-mx/LC_MESSAGES/: django.po
locale/es-ni/LC_MESSAGES/: django.po
locale/es-ve/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
locale/es_419/LC_MESSAGES/: django.po
locale/es_AR/LC_MESSAGES/: django.po
locale/es_CL/LC_MESSAGES/: django.po
locale/es_CO/LC_MESSAGES/: django.po
locale/es_CR/LC_MESSAGES/: django.po
locale/es_DO/LC_MESSAGES/: django.po
locale/es_EC/LC_MESSAGES/: django.po
locale/es_GT/LC_MESSAGES/: django.po
locale/es_HN/LC_MESSAGES/: django.po
locale/es_MX/LC_MESSAGES/: django.po
locale/es_NI/LC_MESSAGES/: django.po
locale/es_PA/LC_MESSAGES/: django.po
locale/es_PE/LC_MESSAGES/: django.po
locale/es_PR/LC_MESSAGES/: django.po
locale/es_PY/LC_MESSAGES/: django.po
locale/es_SV/LC_MESSAGES/: django.po
locale/es_UY/LC_MESSAGES/: django.po
locale/et/LC_MESSAGES/: django.po
locale/et_EE/LC_MESSAGES/: django.po
locale/eu/LC_MESSAGES/: django.po
locale/fa/LC_MESSAGES/: django.po
locale/fi/LC_MESSAGES/: django.po
locale/fi_FI/LC_MESSAGES/: django.po
locale/fo/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
locale/fy/LC_MESSAGES/: django.po
locale/ga/LC_MESSAGES/: django.po
locale/gd/LC_MESSAGES/: django.po
locale/gl/LC_MESSAGES/: django.po
locale/he/LC_MESSAGES/: django.po
locale/hi/LC_MESSAGES/: django.po
locale/hi_IN/LC_MESSAGES/: django.po
locale/hr/LC_MESSAGES/: django.po
locale/hsb/LC_MESSAGES/: django.po
locale/hu/LC_MESSAGES/: django.po
locale/hu_HU/LC_MESSAGES/: django.po
locale/hy/LC_MESSAGES/: django.po
locale/ia/LC_MESSAGES/: django.po
locale/id/LC_MESSAGES/: django.po
locale/ig/LC_MESSAGES/: django.po
locale/io/LC_MESSAGES/: django.po
locale/is/LC_MESSAGES/: django.po
locale/it/LC_MESSAGES/: django.po
locale/ja/LC_MESSAGES/: django.po
locale/ja_JP/LC_MESSAGES/: django.po
locale/ka/LC_MESSAGES/: django.po
locale/ka_GE/LC_MESSAGES/: django.po
locale/kab/LC_MESSAGES/: django.po
locale/kk/LC_MESSAGES/: django.po
locale/km/LC_MESSAGES/: django.po
locale/kn/LC_MESSAGES/: django.po
locale/ko/LC_MESSAGES/: django.po
locale/la/LC_MESSAGES/: django.po
locale/lb/LC_MESSAGES/: django.po
locale/lo/LC_MESSAGES/: django.po
locale/lt/LC_MESSAGES/: django.po
locale/lt_LT/LC_MESSAGES/: django.po
locale/lv/LC_MESSAGES/: django.po
locale/mk/LC_MESSAGES/: django.po
locale/ml/LC_MESSAGES/: django.po
locale/mn/LC_MESSAGES/: django.po
locale/mr/LC_MESSAGES/: django.po
locale/ms_MY/LC_MESSAGES/: django.po
locale/my/LC_MESSAGES/: django.po
nextcloudappstore/: settings.py  urls.py  wsgi.py
nextcloudappstore/api/: apps.py  serializers.py  urls.py  views.py
nextcloudappstore/certificate/: apps.py  nextcloud.crl  validator.py
nextcloudappstore/core/: admin.py  apps.py  caching.py  enterprise.py  facades.py  feeds.py  forms.py  github.py  mixins.py  models.py  permissions.py  rating.py  serializers.py  throttling.py  validators.py  versioning.py  views.py
nextcloudappstore/scaffolding/: apps.py  archive.py  forms.py  views.py
nextcloudappstore/settings/: base.py  baseproduction.py  development.py
nextcloudappstore/theme/: apps.py
nextcloudappstore/user/: adapters.py  admin.py  apps.py  facades.py  forms.py  models.py  odoo.py  signals.py  tests.py  urls.py  views.py
nextcloudappstore/website/: apps.py
requirements/: base.txt  development.txt  production.txt
scripts/: generate_authors.py
scripts/development/: __init__.py  proddata.py  setup.py  testdata.py
scripts/maintenance/: activate.sh  update.sh
static/css/: styles.css
(+681 files in other folders)
