# SPDX-FileCopyrightText: 2022 Nextcloud GmbH and Nextcloud contributors
# SPDX-License-Identifier: AGPL-3.0-or-later

[build-system]
build-backend = "poetry.masonry.api"
requires = [
  "poetry>=1.6.1",
]

[tool.poetry]
name = "nextcloudappstore"
version = "4.11.3"
description = "App store for Nextcloud apps"
authors = [
  "Alexander Piskun <bigcat88@icloud.com>",
  "Edward Ly <contact@edward.ly>",
]
dependencies.python = "^3.12"
dependencies.django = "~4.2.27"
dependencies.django-braces = "~1.17.0"
dependencies.djangorestframework-camel-case = "^1.3.0"
dependencies.django-parler-rest = "^2.1"
dependencies.django-parler = "^2.3"
dependencies.django-allauth = { version = "^0.63.6", extras = [ "socialaccount" ] }
dependencies.lxml = "^5.0.0"
dependencies.requests = ">=2.32.0, <2.33.0"
dependencies.django-cors-headers = "^4.2.0"
dependencies.django-csp = "^3.7"
dependencies.pyOpenSSL = "^24.0.0"
dependencies.Markdown = "^3.3.6"
dependencies.bleach = "^6.0.0"
dependencies.pymple = "^0.1.3"
dependencies.semantic-version = "^2.8.5"
dependencies.pem = "^23.0.0"
dependencies.django-simple-captcha = "^0.6.0"
dependencies.uWSGI = "^2.0.20"
dependencies.newrelic = "^7.2.4"
dependencies.psycopg = { extras = [
  "binary",
], version = "^3.1.10" }
dependencies.redis = { version = "^5.0.0", extras = [
  "hiredis",
] }
dependencies.email-validator = "^2.1.0-post.0"
dependencies.jschon = "^0.11.1"
dependencies.defusedxml = "^0.7.1"
dev-dependencies.pytest = "*"
dev-dependencies.pytest-cov = "*"
dev-dependencies.pytest-django = "*"
dev-dependencies.responses = "*"
dev-dependencies.django-debug-toolbar = "*"
dev-dependencies.coverage = "*"
dev-dependencies.selenium = "*"
dev-dependencies.types-requests = "^2.26.3"
dev-dependencies.types-pyOpenSSL = "^23.0.0"
group.docs.optional = true
group.docs.dependencies.sphinx = "^4.4"
group.docs.dependencies.sphinx-issues = "^4.0.0"
group.docs.dependencies.sphinx-rtd-theme = "^1.0"

[tool.black]
line-length = 120
target-versions = [
  "py312",
]
preview = true

[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = [
  "E",
  "F",
  "UP",
]
lint.extend-per-file-ignores."**/tests/**/__init__.py" = [
  "F403",
]
lint.extend-per-file-ignores."nextcloudappstore/core/migrations/**/*.py" = [
  "E501",
  "F401",
]
lint.extend-per-file-ignores."nextcloudappstore/user/odoo.py" = [
  "E402",
]
lint.extend-per-file-ignores."scripts/development/settings/**/*.py" = [
  "F403",
  "F405",
  "F821",
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = false
warn_unreachable = false
warn_no_return = true
strict_optional = true
check_untyped_defs = true
show_error_codes = true
